tests/models/enum/named/vec/fail/default.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(default = 1)]
        value: Vec<()>
    },
}
fn main() {}
